--- a/Angular-Front/package.json
+++ b/Angular-Front/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "bootstrap": "^5.2.3",
+    "file-saver": "^2.0.5",
+    "papaparse": "^5.4.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -27,7 +29,9 @@
     "@angular-devkit/build-angular": "^15.1.1",
     "@angular/cli": "~15.1.1",
     "@angular/compiler-cli": "^15.1.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~4.3.0",
+    "@types/papaparse": "^5.3.7",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
