--- a/Angular-Front/angular.json
+++ b/Angular-Front/angular.json
@@ -13,6 +13,8 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [
+              "lodash"],
             "outputPath": "dist/cloudmarkng",
             "index": "src/index.html",
             "main": "src/main.ts",
